# github-upload

./: .gitignore  README.md  note.txt  openIDLE.bat  setup.cfg  setup.py
qcext/: cli.py  modelext.py  ptext.py  qcext.py
qcext/models/: __init__.py
qcext/models/codes/: __init__.py  _color_666_code_noisy.py
qcext/models/decoders/: __init__.py  _ising_decoder.py
qcext/models/error_models/: __init__.py  _restricted_bit_flip_error_model.py  _restricted_depolarizing_error_model.py
qcext/models/readouts/: __init__.py  _color_666_noisy_readout_z.py  _color_666_readout_z.py
src/qcext/: __init__.py  __main__.py  appext.py  cli.py  modelext.py  plottingtools.py  ptext.py  qcext_backup.py  temp_qecsim_app.py
src/qcext/models/: __init__.py
src/qcext/models/codes/: __init__.py  _color_666_code_noisy.py
src/qcext/models/decoders/: __init__.py  _color_matching_decoder.py  _fast_ising_decoder.py  _hybrid_decoder_perfect_measurement.py  _ising_decoder.py  _ising_decoder_no_boundary_correction.py
src/qcext/models/error_models/: __init__.py  _biased_bit_flip_error_model.py  _restricted_bit_flip_error_model.py  _restricted_depolarizing_error_model.py  biased_noise_model_helpers.py
src/qcext/models/readouts/: __init__.py  _color_666_do_nothing_readout_z.py  _color_666_noisy_readout_z.py  _color_666_readout_z.py
tests/: test_appext.py  test_cli.py  test_plottingtools.py  test_util.py  util.py
tests/models/: test_biased_bit_flip_error_model.py  test_color_matching_decoder.py  test_fast_ising_decoder.py  test_hybrid_decoder_perfect_measurement.py  test_ising_decoder.py
