[metadata]
name = qcext 
version = attr: qcext.__version__ 

[options]
packages = qcext

[options.entry_points] 
console_scripts = 
	qcext = qcext.cli:cli 
qecsim.cli.run.codes = 
	color666noisy = qcext.qcext:Color666CodeNoisy
qecsim.cli.run.error_models = 
	restricted_depolarizing = qcext.qcext:RestrictedDepolarizingErrorModel
qcext.cli.run_ft.codes = 
	color666noisy = qcext.qcext:Color666CodeNoisy
qcext.cli.run_ft.error_models = 
	restricted_depolarizing = qcext.qcext:RestrictedDepolarizingErrorModel 
qcext.cli.run_ft.decoders = 
	ising_decoder = qcext.qcext:IsingDecoder
qcext.cli.run_ft.readouts = 
	color666noisy_z = qcext.qcext:Color666NoisyReadoutZ 
