[metadata]
name = qcext 
version = attr: qcext.__version__ 

[options]
package_dir=
    =src
packages=find:
install_requires =
	qecsim
	click>=7
    	numpy>=1.17
tests_require =
	parameterized

[options.packages.find]
where=src

[options.entry_points] 
console_scripts = 
	qcext = qcext.cli:cli 
qecsim.cli.run.codes = 
	color666noisy = qcext.models.codes:Color666CodeNoisy
qecsim.cli.run.error_models = 
	restricted_depolarizing = qcext.models.error_models:RestrictedDepolarizingErrorModel
	biased_bit_flip = qcext.models.error_models:BiasedBitFlipErrorModel
qecsim.cli.run.decoders =
	color_matching = qcext.models.decoders:ColorMatchingDecoder
qcext.cli.run_ft.codes = 
	color666noisy = qcext.models.codes:Color666CodeNoisy
qcext.cli.run_ft.error_models = 
	restricted_depolarizing = qcext.models.error_models:RestrictedDepolarizingErrorModel
	biased_bit_flip = qcext.models.error_models:BiasedBitFlipErrorModel
qcext.cli.run_ft.decoders = 
	ising_decoder = qcext.models.decoders:IsingDecoder
	hybrid_decoder_perfect_measurement = qcext.models.decoders:HybridDecoderPerfectMeasurement
qcext.cli.run_ft.readouts = 
	color666noisy_z = qcext.models.readouts:Color666NoisyReadoutZ
	color666_do_nothing_readout_z = qcext.models.readouts:Color666DoNothingReadoutZ
